# json-gettext

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci-version.yml  ci.yml
examples/: hello.rs  hello_language.rs  hello_language_region_pair.rs  hello_region.rs
langs/: en_US.json  zh_TW.json  zh_TW_extra_key.json
src/: builder.rs  fairing.rs  json_get_text_build_errors.rs  json_gettext.rs  json_gettext_value.rs  lib.rs  macros.rs  manager.rs  mutate.rs  reloadable_json_gettext.rs
src/key_copy/: json_get_text_builder.rs  json_gettext.rs  mod.rs
src/key_copy/keys/: language.rs  language_region_pair.rs  mod.rs  region.rs
src/key_copy/rocket_feature/: mod.rs
src/key_copy/rocket_feature/debug/: json_get_text_fairing.rs  json_get_text_manager.rs  mod.rs
src/key_copy/rocket_feature/release/: json_get_text_fairing.rs  json_get_text_manager.rs
src/key_string/: json_get_text_builder.rs  json_gettext.rs  mod.rs
src/key_string/rocket_feature/: mod.rs
src/key_string/rocket_feature/debug/: json_get_text_fairing.rs  json_get_text_manager.rs
src/key_string/rocket_feature/release/: json_get_text_fairing.rs  json_get_text_manager.rs
src/macros/: mod.rs
src/macros/rocket_feature/: mod.rs
src/macros/rocket_feature/debug/: mod.rs
src/macros/rocket_feature/release/: mod.rs
src/value/: errors.rs  mod.rs  value_impl.rs
tests/: key_string_multiple.rs  key_string_single.rs  multiple.rs  single.rs  value.rs
