[package]
name = "json-gettext"
version = "4.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/json-gettext"
homepage = "https://magiclen.org/json-gettext"
keywords = ["json", "i18n", "multi-language", "static", "rocket"]
categories = ["internationalization"]
description = "A library for getting text from JSON usually for internationalization."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "examples/*"]

[dependencies]
serde = "1"
serde_json = "1"
regex = "1"
unic-langid = { version = "0.9", features = ["macros"], optional = true }
unic-langid-macros = { version = "0.9", optional = true }
manifest-dir-macros = { version = "0.1.6", features = ["tuple"] }

rocket = { version = "0.5.0-rc.1", optional = true }
rocket-accept-language = { version = "0.8", optional = true }

[features]
rocketly = ["rocket"]
langid = ["unic-langid", "unic-langid-macros"]
language_region_pair = ["langid"]
language = ["langid"]
region = ["langid"]

[[example]]
name = "hello"
required-features = ["rocket"]

[[example]]
name = "hello_language_region_pair"
required-features = ["rocket", "language_region_pair", "rocket-accept-language"]

[[example]]
name = "hello_language"
required-features = ["rocket", "language", "rocket-accept-language"]

[[example]]
name = "hello_region"
required-features = ["rocket", "region", "rocket-accept-language"]